<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic User Form</string>
    <string name="action_settings">Settings</string>
    <string name="name_text_view">Name</string>
    <string name="email_text_view">Email</string>
    <string name="email_edit_text">abc@abc.com</string>
    <string name="gender_text_view">Gender</string>
    <string name="gender_male_text_view">Male</string>
    <string name="gender_female_text_view">Female</string>
    <string name="occupation_text_view">Occupation</string>

    <string-array name="occupation_role_spinner">
        <item>Select</item>
        <item>Graduate</item>
        <item>Undergraduate</item>
        <item>Professional</item>
    </string-array>

    <string name="skills_text_view">Skills</string>
    <string name="skill_read_text_view">Read</string>
    <string name="skill_write_text_view">Write</string>
    <string name="skill_speak_text_view">Speak</string>
    <string name="submit_button">Submit</string>
    <string name="reset_button">Reset</string>
    <string name="title_activity_display_form_detail">displayFormDetail</string>
    <string name="hello_world">Hello world!</string>

</resources>
