<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="abhishek.basicuserform.app.displayFormDetail">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_text_view"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/displayNameTextView"
        android:layout_marginLeft="37dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_text_view"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/displayEmailTextView"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignLeft="@+id/displayNameTextView"
        android:layout_alignStart="@+id/displayNameTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_text_view"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/displayGenderTextView"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignLeft="@+id/displayEmailTextView"
        android:layout_alignStart="@+id/displayEmailTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skills_text_view"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/displayReadTextView"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignLeft="@+id/displayGenderTextView"
        android:layout_alignStart="@+id/displayGenderTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/displayWriteTextView"
        android:layout_below="@+id/displayReadTextView"
        android:layout_alignLeft="@+id/displayReadTextView"
        android:layout_alignStart="@+id/displayReadTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/displaySpeakTextView"
        android:layout_below="@+id/displayWriteTextView"
        android:layout_alignLeft="@+id/displayWriteTextView"
        android:layout_alignStart="@+id/displayWriteTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/occupation_text_view"
        android:id="@+id/textView6"
        android:layout_below="@+id/displaySpeakTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/displayOccupationTextView"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignLeft="@+id/displaySpeakTextView"
        android:layout_alignStart="@+id/displaySpeakTextView" />

</RelativeLayout>
